Bug 1042974 - Dispatch flings to the right scrollable element in the presence of scrollgrab. r=kats